# libconfini-d

./: README.md  meson.build  meson_options.txt
C/: confini.d
